--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,56 @@
+.picture {
+  list-style: none;
+  flex-basis: calc((100% - 100px) / 4);
+}
+
+.searchbar {
+  background-color: rgb(0, 64, 154);
+  display: flex;
+  width: 100%;
+  padding: 15px;
+  justify-content: center;
+  gap: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.input {
+  border: none;
+  border-radius: 5px;
+  width: 400px;
+  padding-left: 15px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pictures {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  padding: 0;
+  justify-content: center;
+  padding-top: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
-.card {
-  padding: 2em;
+.loadingBtn {
+  background-color: rgb(0, 64, 154);
+  color: white;
+  margin-bottom: 30px;
+  border-radius: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.btnContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
